<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="@dimen/background_break"
        android:layout_height="match_parent"
        android:background="@color/color_primaryDark"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginVertical="@dimen/small_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="@dimen/background_break"
                android:layout_height="@dimen/title_height"
                android:fontFamily="@font/holtwood_one_sc"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text" />

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:fontFamily="@font/holtwood_one_sc"
                android:gravity="left"
                android:text="@string/label"
                android:textColor="@color/color_primaryDark"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin">

            <Button
                android:id="@+id/btn_main_course"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_weight="1"
                android:contentDescription="@string/pizza"
                android:backgroundTint="@color/color_accent"
                android:clickable="true"
                android:text="Pizza"
                android:src="@drawable/baseline_fastfood_24" />

            <Button
                android:id="@+id/btn_dessert"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:clickable="true"
                android:text="@string/desserts"
                android:contentDescription="@string/desserts"

            android:src="@drawable/baseline_filter_vintage_24" />

            <Button
                android:id="@+id/btn_drinks"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_marginHorizontal="@dimen/small_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:text="@string/drinks"
                android:clickable="true"
                android:contentDescription="@string/drinks"
                android:src="@drawable/baseline_local_drink_24" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin">
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/tv_card_width"
                        android:layout_height="@dimen/tv_card_height"
                        app:cardCornerRadius="@dimen/tv_corner_radius"
                        android:layout_centerHorizontal="true"

                        app:cardBackgroundColor="@color/color_white"
                        >

                        <RelativeLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_first_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:fontFamily="@font/holtwood_one_sc"
                                android:text="@string/pizza1"
                                android:textSize="@dimen/small_text" />

                            <TextView
                                android:id="@+id/tv_first_info"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/tv_first_title"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:fontFamily="@font/holtwood_one_sc"

                                android:text="@string/pizza1info"
                                android:textColor="@color/color_grey"
                                android:textSize="@dimen/mini_text" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/large_margin"
                        app:cardCornerRadius="@dimen/tv_corner_radius">
                        <ImageView
                            android:id="@+id/tv_first_picture"
                            android:layout_width="@dimen/tv_picture_size"
                            android:layout_height="@dimen/tv_picture_size"
                            android:src="@drawable/pizza1"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/tv_card_width"
                        android:layout_height="@dimen/tv_card_height"
                        app:cardCornerRadius="@dimen/tv_corner_radius"
                        android:layout_centerHorizontal="true"

                        app:cardBackgroundColor="@color/color_white"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tv_second_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:text="@string/pizza2"
                                android:textSize="@dimen/small_text"
                                android:fontFamily="@font/holtwood_one_sc"
                                />
                            <TextView
                                android:id="@+id/tv_second_info"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:text="@string/pizza2info"
                                android:textSize="@dimen/mini_text"

                                android:textColor="@color/color_grey"
                                android:fontFamily="@font/holtwood_one_sc"
                                android:layout_below="@id/tv_second_title"
                                />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/large_margin"
                        app:cardCornerRadius="@dimen/tv_corner_radius">
                        <ImageView
                            android:id="@+id/tv_second_picture"
                            android:layout_width="@dimen/tv_picture_size"
                            android:layout_height="@dimen/tv_picture_size"
                            android:src="@drawable/pizza2"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/tv_card_width"
                        android:layout_height="@dimen/tv_card_height"
                        android:layout_centerHorizontal="true"
                        app:cardCornerRadius="@dimen/tv_corner_radius"
                        app:cardBackgroundColor="@color/color_white"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tv_third_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:text="@string/pizza3"
                                android:textSize="@dimen/small_text"
                                android:fontFamily="@font/holtwood_one_sc"
                                />
                            <TextView
                                android:id="@+id/tv_third_info"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:text="@string/pizza3info"
                                android:textSize="@dimen/mini_text"

                                android:textColor="@color/color_grey"
                                android:fontFamily="@font/holtwood_one_sc"
                                android:layout_below="@id/tv_third_title"
                                />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/large_margin"
                        app:cardCornerRadius="@dimen/tv_corner_radius">
                        <ImageView
                            android:id="@+id/tv_third_picture"
                            android:layout_width="@dimen/tv_picture_size"
                            android:layout_height="@dimen/tv_picture_size"
                            android:src="@drawable/pizza3"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>